Fixed spacing issues with news

--- a/src/sass/components/_components.footer.scss
+++ b/src/sass/components/_components.footer.scss
@@ -6,7 +6,7 @@
         flex-wrap: wrap;
         flex-direction: column;
         align-items: center;
-        padding: 2*$inuit-global-spacing-unit $inuit-global-spacing-unit-small;
+        padding: 2*$inuit-global-spacing-unit $inuit-global-spacing-unit;
         background: #3a3a3a;
         @media screen and (min-width: 768px) {
             flex-direction: row;
